# zed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  repl.rs
src/data/: expression.rs  expression_tests.rs  function.rs  function_tests.rs  mod.rs  number.rs  number_tests.rs  test_helpers.rs
src/eval/: environment.rs  environment_tests.rs  error.rs  error_tests.rs  eval.rs  evaluator.rs  evaluator_tests.rs  expr_evaluator.rs  mod.rs
src/print/: error.rs  mod.rs  print.rs  repl_printer.rs
src/read/: error.rs  error_tests.rs  expr_reader.rs  expr_reader_tests.rs  mod.rs  parser.rs  parser_tests.rs  read.rs  reader.rs  reader_tests.rs  repl_text_reader.rs
